tests/snapshots/examples_fixtures/aoc__2025__aoc_day5_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day5_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `read_lines` requires effect `IO` in this function signature.

  examples/aoc/2025/aoc_day5_haskell_style.flx:73:17
   |
73 |     let lines = read_lines(path)
   |                 ^^^^^^^^^^
   |                 ---------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
